--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="tacit-VERSION.css"/>
+    <link rel="stylesheet" type="text/css" href="tacit-VERSION.min.css"/>
   </head>
   <body>
     <h1>Tacit</h1>
