--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="tacit-1.0.0.min.css"/>
+    <link rel="stylesheet" type="text/css" href="tacit-VERSION.min.css"/>
   </head>
   <body>
     <h1>Tacit</h1>
@@ -16,7 +16,7 @@
     <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" type="text/css" href="//img.teamed.io/tacit-1.0.0.min.css"/&gt;
+    &lt;link rel="stylesheet" type="text/css" href="//img.teamed.io/tacit-VERSION.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
     <p>
