--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="tacit-VERSION.min.css"/>
   </head>
   <body>
+    <p>version: <code>VERSION</code></p>
     <h1>Tacit</h1>
     <p>
       Tacit is a CSS framework for <em>dummies</em>, who want their
