--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" type="text/css" href="//img.teamed.io/tacit-VERSION.min.css"/&gt;
+    &lt;link rel="stylesheet" type="text/css" href="//yegor256.github.io/tacit/tacit-VERSION.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
     <p>
