--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         </nav>
       </header>
       <article>
-        <h1>Tacit</h1>
         <p>
-          Tacit is a CSS framework for <em>dummies</em>, who want their
+          <strong>Tacit</strong> is a CSS framework for <em>dummies</em>, who want their
           web services look attractive but have almost zero
           skills in graphic design, just like
           <a href="https://github.com/yegor256">myself</a>.
