--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
           web services look attractive but have almost zero
           skills in graphic design, just like
           <a href="https://github.com/yegor256">myself</a>.
-          This is how your website will look if just add this code to
-          your HTML:
+          This is how your website will look if you add just this code to your HTML:
         </p>
         <pre>&lt;!DOCTYPE html&gt;
   &lt;html&gt;
@@ -32,6 +31,9 @@
           make sure it is <a href="http://www.w3.org/TR/html5/">HTML5</a>
           compliant and you'll be fine. Again, no classes,
           just standard HTML elements, like <code>&lt;table&gt;</code> and <code>&lt;input&gt;</code>.
+        </p>
+        <p>
+          Check the source code of this page.
         </p>
         <h2>Forms</h2>
         <p>
