--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="tacit-0.1.1.min.css"/>
+    <link rel="stylesheet" type="text/css" href="tacit-0.2.0.min.css"/>
   </head>
   <body>
     <section>
       <header>
         <nav>
           <ul>
-            <li><code>0.1.1</code></li>
+            <li><code>0.2.0</code></li>
           </ul>
         </nav>
       </header>
@@ -18,13 +18,12 @@
           web services look attractive but have almost zero
           skills in graphic design, just like
           <a href="https://github.com/yegor256">myself</a>.
-          This is how your website will look if just add this code to
-          your HTML:
+          This is how your website will look if you add just this code to your HTML:
         </p>
         <pre>&lt;!DOCTYPE html&gt;
   &lt;html&gt;
     &lt;head&gt;
-      &lt;link rel="stylesheet" type="text/css" href="//yegor256.github.io/tacit/tacit-0.1.1.min.css"/&gt;
+      &lt;link rel="stylesheet" type="text/css" href="//yegor256.github.io/tacit/tacit-0.2.0.min.css"/&gt;
     &lt;/head&gt;
   &lt;/html&gt;</pre>
         <p>
@@ -32,6 +31,9 @@
           make sure it is <a href="http://www.w3.org/TR/html5/">HTML5</a>
           compliant and you'll be fine. Again, no classes,
           just standard HTML elements, like <code>&lt;table&gt;</code> and <code>&lt;input&gt;</code>.
+        </p>
+        <p>
+          Check the source code of this page.
         </p>
         <h2>Forms</h2>
         <p>
