--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <footer>
         <nav>
           <ul>
-            <li><small>&#169; Yegor Bugayenko, 2015</small></li>
+            <li><small>&#169; <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015</small></li>
           </ul>
         </nav>
       </footer>
