--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="keywords" content="css, html5, css framework"/>
+    <meta name="description" content="CSS Framework for Dummies"/>
     <link rel="stylesheet" type="text/css" href="tacit-VERSION.min.css"/>
+    <title>tacit</title>
+    <link rel="shortcut icon" type="image/gif" href="logo.gif"/>
   </head>
   <body>
     <section>
@@ -39,7 +45,7 @@
         <p>
           Here is a simple form:
         </p>
-        <form method="get" action="">
+        <form method="get" action="#">
           <fieldset>
             <label for="email">Your email:</label>
             <input name="email" type="text" id="email" size="25" placeholder="must be unique"/>
