--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <label for="email">Your email:</label>
             <input name="email" type="text" id="email" size="25" placeholder="must be unique"/>
             <label for="address">Your full address:</label>
-            <textarea name="address" type="text" id="address" cols="40" rows="3" placeholder="PO box is not allowed"></textarea>
+            <textarea name="address" id="address" cols="40" rows="3" placeholder="PO box is not allowed"></textarea>
             <button type="submit">Subscribe</button>
           </fieldset>
         </form>
