--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
           just standard HTML elements, like <code>&lt;table&gt;</code> and <code>&lt;input&gt;</code>.
         </p>
         <p>
-          Check the source code of this page.
+          Check the source code of this page. By the way, it is checked
+          for W3C validator compliance:
+          <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fyegor256.github.io%2Ftacit%2F&amp;doctype=Inline">HTML</a> and
+          <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fyegor256.github.io%2Ftacit%2F&amp;profile=css3">CSS</a>.
         </p>
         <h2>Forms</h2>
         <p>
