--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
           just standard HTML elements, like <code>&lt;table&gt;</code> and <code>&lt;input&gt;</code>.
         </p>
         <p>
-          Check the source code of this page. By the way, it is checked
-          for W3C validator compliance:
+          Check the source code of this page.
+        </p>
+        <p>
+          By the way, it is compliant with
+          W3C validator requirements:
           <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fyegor256.github.io%2Ftacit%2F&amp;doctype=Inline">HTML</a> and
           <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fyegor256.github.io%2Ftacit%2F&amp;profile=css3">CSS</a>.
         </p>
@@ -92,7 +95,10 @@
       <footer>
         <nav>
           <ul>
-            <li><small>&#169; <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015</small></li>
+            <li>
+              <small>made by <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015,
+              <a href="http://opensource.org/licenses/MIT">MIT license</a></small>
+            </li>
           </ul>
         </nav>
       </footer>
