--- a/index.html
+++ b/index.html
@@ -96,8 +96,16 @@
         <nav>
           <ul>
             <li>
-              <small>made by <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015,
-              <a href="http://opensource.org/licenses/MIT">MIT license</a></small>
+              <small>Made by <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015</small>
+            </li>
+          </ul>
+        </nav>
+        <nav>
+          <ul>
+            <li>
+              <small><a href="https://github.com/yegor256/tacit">Github</a></small>
+              <small><a href="http://yegor256.github.io/tacit/tacit-VERSION.min.css">Download</a></small>
+              <small><a href="http://opensource.org/licenses/MIT">MIT license</a></small>
             </li>
           </ul>
         </nav>
