--- a/index.html
+++ b/index.html
@@ -102,11 +102,9 @@
         </nav>
         <nav>
           <ul>
-            <li>
-              <small><a href="https://github.com/yegor256/tacit">Github</a></small>
-              <small><a href="http://yegor256.github.io/tacit/tacit-VERSION.min.css">Download</a></small>
-              <small><a href="http://opensource.org/licenses/MIT">MIT license</a></small>
-            </li>
+            <li><small><a href="https://github.com/yegor256/tacit">Github</a></small></li>
+            <li><small><a href="http://yegor256.github.io/tacit/tacit-VERSION.min.css">Download</a></small></li>
+            <li><small><a href="http://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
       </footer>
