--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@
             <li><small><a href="http://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
+        <nav>
+          <ul>
+            <li>
+              <a href="https://github.com/yegor256/tacit/stargazers">
+                <img src="https://img.shields.io/github/stars/yegor256/tacit.svg?style=flat-square" alt="github stars"/>
+              </a>
+            </li>
+          </ul>
+        </nav>
       </footer>
     </section>
     <script>
