--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
           <fieldset>
             <label for="email">Your email:</label>
             <input name="email" type="text" id="email" size="25" placeholder="must be unique"/>
+            <label for="sex">Your gender:</label>
+            <select name="sex" id="sex">
+              <option value="male">male</option>
+              <option value="female">female</option>
+              <option value="none">won't tell</option>
+            </select>
             <label for="address">Your full address:</label>
             <textarea name="address" id="address" cols="40" rows="3" placeholder="PO box is not allowed"></textarea>
             <button type="submit">Subscribe</button>
