--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             </select>
             <label for="address">Your full address:</label>
             <textarea name="address" id="address" cols="40" rows="3" placeholder="PO box is not allowed"></textarea>
+            <input type="checkbox" name="consent" value="test"/>
+            <label for="consent">I agree with all possible terms and conditions</label>
             <button type="submit">Subscribe</button>
           </fieldset>
         </form>
