--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <input type="checkbox" name="consent" value="test"/>
             <label for="consent">I agree with all possible terms and conditions</label>
             <button type="submit">Subscribe</button>
+            <button type="reset">Reset</button>
           </fieldset>
         </form>
         <h2>Tables</h2>
