--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="keywords" content="css, html5, css framework"/>
     <meta name="description" content="CSS Framework for Dummies"/>
-    <link rel="stylesheet" type="text/css" href="tacit-0.2.1.min.css"/>
+    <link rel="stylesheet" type="text/css" href="tacit-0.3.0.min.css"/>
     <title>tacit</title>
     <link rel="shortcut icon" type="image/gif" href="logo.gif"/>
   </head>
@@ -14,7 +14,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>0.2.1</code></li>
+            <li><code>0.3.0</code></li>
           </ul>
         </nav>
       </header>
@@ -29,7 +29,7 @@
         <pre>&lt;!DOCTYPE html&gt;
   &lt;html&gt;
     &lt;head&gt;
-      &lt;link rel="stylesheet" type="text/css" href="//yegor256.github.io/tacit/tacit-0.2.1.min.css"/&gt;
+      &lt;link rel="stylesheet" type="text/css" href="//yegor256.github.io/tacit/tacit-0.3.0.min.css"/&gt;
     &lt;/head&gt;
   &lt;/html&gt;</pre>
         <p>
@@ -39,8 +39,11 @@
           just standard HTML elements, like <code>&lt;table&gt;</code> and <code>&lt;input&gt;</code>.
         </p>
         <p>
-          Check the source code of this page. By the way, it is checked
-          for W3C validator compliance:
+          Check the source code of this page.
+        </p>
+        <p>
+          By the way, it is compliant with
+          W3C validator requirements:
           <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fyegor256.github.io%2Ftacit%2F&amp;doctype=Inline">HTML</a> and
           <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fyegor256.github.io%2Ftacit%2F&amp;profile=css3">CSS</a>.
         </p>
@@ -52,9 +55,18 @@
           <fieldset>
             <label for="email">Your email:</label>
             <input name="email" type="text" id="email" size="25" placeholder="must be unique"/>
+            <label for="sex">Your gender:</label>
+            <select name="sex" id="sex">
+              <option value="male">male</option>
+              <option value="female">female</option>
+              <option value="none">won't tell</option>
+            </select>
             <label for="address">Your full address:</label>
             <textarea name="address" id="address" cols="40" rows="3" placeholder="PO box is not allowed"></textarea>
+            <input type="checkbox" name="consent" value="test"/>
+            <label for="consent">I agree with all possible terms and conditions</label>
             <button type="submit">Subscribe</button>
+            <button type="reset">Reset</button>
           </fieldset>
         </form>
         <h2>Tables</h2>
@@ -92,7 +104,25 @@
       <footer>
         <nav>
           <ul>
-            <li><small>&#169; <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015</small></li>
+            <li>
+              <small>Made by <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015</small>
+            </li>
+          </ul>
+        </nav>
+        <nav>
+          <ul>
+            <li><small><a href="https://github.com/yegor256/tacit">Github</a></small></li>
+            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.3.0.min.css">Download</a></small></li>
+            <li><small><a href="http://opensource.org/licenses/MIT">MIT license</a></small></li>
+          </ul>
+        </nav>
+        <nav>
+          <ul>
+            <li>
+              <a href="https://github.com/yegor256/tacit/stargazers">
+                <img src="https://img.shields.io/github/stars/yegor256/tacit.svg?style=flat-square" alt="github stars"/>
+              </a>
+            </li>
           </ul>
         </nav>
       </footer>
