#8 tacit.min.css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="keywords" content="css, html5, css framework"/>
     <meta name="description" content="CSS Framework for Dummies"/>
-    <link rel="stylesheet" type="text/css" href="tacit-VERSION.min.css"/>
+    <link rel="stylesheet" type="text/css" href="tacit.min.css"/>
     <title>tacit</title>
     <link rel="shortcut icon" type="image/gif" href="logo.gif"/>
   </head>
@@ -29,7 +29,7 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" type="text/css" href="//yegor256.github.io/tacit/tacit-VERSION.min.css"/&gt;
+    &lt;link rel="stylesheet" type="text/css" href="//yegor256.github.io/tacit/tacit.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
