--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="keywords" content="css, html5, css framework"/>
     <meta name="description" content="CSS Framework for Dummies"/>
-    <link rel="stylesheet" type="text/css" href="tacit-0.3.0.min.css"/>
+    <link rel="stylesheet" type="text/css" href="tacit.min.css"/>
     <title>tacit</title>
     <link rel="shortcut icon" type="image/gif" href="logo.gif"/>
   </head>
@@ -14,7 +14,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>0.3.0</code></li>
+            <li><code>0.3.1</code></li>
           </ul>
         </nav>
       </header>
@@ -27,11 +27,11 @@
           This is how your website will look if you add just this code to your HTML:
         </p>
         <pre>&lt;!DOCTYPE html&gt;
-  &lt;html&gt;
-    &lt;head&gt;
-      &lt;link rel="stylesheet" type="text/css" href="//yegor256.github.io/tacit/tacit-0.3.0.min.css"/&gt;
-    &lt;/head&gt;
-  &lt;/html&gt;</pre>
+&lt;html&gt;
+  &lt;head&gt;
+    &lt;link rel="stylesheet" type="text/css" href="//yegor256.github.io/tacit/tacit.min.css"/&gt;
+  &lt;/head&gt;
+&lt;/html&gt;</pre>
         <p>
           You should <strong>not</strong> use any CSS classes to make your HTML code look nice. Just
           make sure it is <a href="http://www.w3.org/TR/html5/">HTML5</a>
@@ -112,7 +112,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">Github</a></small></li>
-            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.3.0.min.css">Download</a></small></li>
+            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.3.1.min.css">Download</a></small></li>
             <li><small><a href="http://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
