--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" type="text/css" href="//yegor256.github.io/tacit/tacit.min.css"/&gt;
+    &lt;link rel="stylesheet" type="text/css"
+      href="//yegor256.github.io/tacit/tacit.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
