--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>0.3.2</code></li>
+            <li><code>0.3.3</code></li>
           </ul>
         </nav>
       </header>
@@ -29,7 +29,8 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" type="text/css" href="//yegor256.github.io/tacit/tacit.min.css"/&gt;
+    &lt;link rel="stylesheet" type="text/css"
+      href="//yegor256.github.io/tacit/tacit.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -63,7 +64,7 @@
             </select>
             <label for="address">Your full address:</label>
             <textarea name="address" id="address" cols="40" rows="3" placeholder="PO box is not allowed"></textarea>
-            <input type="checkbox" name="consent" value="test"/>
+            <input type="checkbox" name="consent" id="consent" value="test"/>
             <label for="consent">I agree with all possible terms and conditions</label>
             <button type="submit">Subscribe</button>
             <button type="reset">Reset</button>
@@ -112,7 +113,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">Github</a></small></li>
-            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.3.2.min.css">Download</a></small></li>
+            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.3.3.min.css">Download</a></small></li>
             <li><small><a href="http://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
