--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             Default:
           </p>
           <button>Enabled</button>
-          <button disabled="true">Disabled</button>
+          <button disabled>Disabled</button>
         </form>
         <h2>Tables</h2>
         <p>
