#28 index.html polished

--- a/index.html
+++ b/index.html
@@ -95,6 +95,20 @@
             </tr>
           </tbody>
         </table>
+        <h2>Headings</h2>
+        <p>Just use standard <code>&lt;h1&gt;</code>...<code>&lt;h6&gt;</code> tags:
+        <h1>This is &lt;h1&gt;</h1>
+        <p>Use heading of the highest level once per page.</p>
+        <h2>This is &lt;h2&gt;</h2>
+        <p>Use <code>&lt;h2&gt;</code> for sections of the page.</p>
+        <h3>This is &lt;h3&gt;</h3>
+        <p>Use <code>&lt;h3&gt;</code> for sub-sections.</p>
+        <h4>This is &lt;h4&gt;</h4>
+        <p>I would recommend to avoid type of headers at all.</p>
+        <h5>This is &lt;h5&gt;</h5>
+        <p>I would recommend to avoid type of headers at all.</p>
+        <h6>This is &lt;h6&gt;</h6>
+        <p>I would recommend to avoid type of headers at all.</p>
         <h2>Work in progress</h2>
         <p>
           The framework is still in development. If you want to contribute,
