--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>0.3.6</code></li>
+            <li><code>0.4</code></li>
           </ul>
         </nav>
       </header>
@@ -95,12 +95,37 @@
             </tr>
           </tbody>
         </table>
+        <h2>Headings</h2>
+        <p>Just use standard <code>&lt;h1&gt;</code>...<code>&lt;h6&gt;</code> tags:
+        <h1>This is &lt;h1&gt;</h1>
+        <p>Use heading of the highest level once per page.</p>
+        <h2>This is &lt;h2&gt;</h2>
+        <p>Use <code>&lt;h2&gt;</code> for sections of the page.</p>
+        <h3>This is &lt;h3&gt;</h3>
+        <p>Use <code>&lt;h3&gt;</code> for sub-sections.</p>
+        <h4>This is &lt;h4&gt;</h4>
+        <p>I would recommend to avoid type of headers at all.</p>
+        <h5>This is &lt;h5&gt;</h5>
+        <p>I would recommend to avoid type of headers at all.</p>
+        <h6>This is &lt;h6&gt;</h6>
+        <p>I would recommend to avoid type of headers at all.</p>
         <h2>Work in progress</h2>
         <p>
           The framework is still in development. If you want to contribute,
           fork it and submit a <a href="https://github.com/yegor256/tacit">pull request</a>.
           Your help is always apprecitated.
         </p>
+
+        <hr>
+        
+        <h1>Heading 1</h1>
+        <h2>Heading 2</h2>
+        <h3>Heading 3</h3>
+        <h4>Heading 4</h4>
+        <h5>Heading 5</h5>
+        <h6>Heading 6</h6>
+
+
       </article>
       <footer>
         <nav>
@@ -113,7 +138,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">Github</a></small></li>
-            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.3.6.min.css">Download</a></small></li>
+            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.4.min.css">Download</a></small></li>
             <li><small><a href="http://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
