--- a/index.html
+++ b/index.html
@@ -68,15 +68,8 @@
             <label for="consent">I agree with all possible terms and conditions</label>
             <button type="submit">Subscribe</button>
             <button type="reset">Reset</button>
+            <button disabled>Can't click</button>
           </fieldset>
-        </form>
-        <h2>Buttons</h2>
-        <form action="#">
-          <p>
-            Default:
-          </p>
-          <button>Enabled</button>
-          <button disabled>Disabled</button>
         </form>
         <h2>Tables</h2>
         <p>
@@ -125,7 +118,7 @@
         </p>
 
         <hr>
-        
+
         <h1>Heading 1</h1>
         <h2>Heading 2</h2>
         <h3>Heading 3</h3>
