--- a/index.html
+++ b/index.html
@@ -110,6 +110,28 @@
         <p>I would recommend to avoid type of headers at all.</p>
         <h6>This is &lt;h6&gt;</h6>
         <p>I would recommend to avoid type of headers at all.</p>
+        <h2>Lists</h2>
+        <p>Just use standard <code>&lt;ul&gt;</code> and <code>&lt;ol&gt;</code> tags:</code>
+        <ul>
+          <li>Orange</li>
+          <li>
+            Apple
+            <ol>
+              <li>First</li>
+              <li>
+                Second
+                <ul>
+                  <li>Blue</li>
+                  <li>Yellow</li>
+                  <li>Green</li>
+                  <li>Red</li>
+                </ul>
+              </li>
+              <li>Third</li>
+            </ol>
+          </li>
+          <li>Appricot</li>
+        </ul>
         <h2>Work in progress</h2>
         <p>
           The framework is still in development. If you want to contribute,
