--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>0.5.1</code></li>
+            <li><code>0.5.2</code></li>
           </ul>
         </nav>
       </header>
@@ -110,23 +110,34 @@
         <p>I would recommend to avoid type of headers at all.</p>
         <h6>This is &lt;h6&gt;</h6>
         <p>I would recommend to avoid type of headers at all.</p>
+        <h2>Lists</h2>
+        <p>Just use standard <code>&lt;ul&gt;</code> and <code>&lt;ol&gt;</code> tags:</code>
+        <ul>
+          <li>Orange</li>
+          <li>
+            Apple
+            <ol>
+              <li>First</li>
+              <li>
+                Second
+                <ul>
+                  <li>Blue</li>
+                  <li>Yellow</li>
+                  <li>Green</li>
+                  <li>Red</li>
+                </ul>
+              </li>
+              <li>Third</li>
+            </ol>
+          </li>
+          <li>Appricot</li>
+        </ul>
         <h2>Work in progress</h2>
         <p>
           The framework is still in development. If you want to contribute,
           fork it and submit a <a href="https://github.com/yegor256/tacit">pull request</a>.
           Your help is always apprecitated.
         </p>
-
-        <hr>
-
-        <h1>Heading 1</h1>
-        <h2>Heading 2</h2>
-        <h3>Heading 3</h3>
-        <h4>Heading 4</h4>
-        <h5>Heading 5</h5>
-        <h6>Heading 6</h6>
-
-
       </article>
       <footer>
         <nav>
@@ -139,7 +150,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">Github</a></small></li>
-            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.5.1.min.css">Download</a></small></li>
+            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.5.2.min.css">Download</a></small></li>
             <li><small><a href="http://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
