--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
               <option value="female">female</option>
               <option value="male">male</option>
             </select>
+            <input type="radio" id="under" name="age"/>
+            <label for="under">I'm under 18</label>
+            <input type="radio" id="over" name="age"/>
+            <label for="over">I'm over 18</label>
             <label for="address">Your full address:</label>
             <textarea name="address" id="address" cols="40" rows="3" placeholder="PO box is not allowed"></textarea>
             <input type="checkbox" name="consent" id="consent" value="test"/>
