--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>0.5.2</code></li>
+            <li><code>0.5.3</code></li>
           </ul>
         </nav>
       </header>
@@ -62,6 +62,10 @@
               <option value="female">female</option>
               <option value="male">male</option>
             </select>
+            <input type="radio" id="under" name="age"/>
+            <label for="under">I'm under 18</label>
+            <input type="radio" id="over" name="age"/>
+            <label for="over">I'm over 18</label>
             <label for="address">Your full address:</label>
             <textarea name="address" id="address" cols="40" rows="3" placeholder="PO box is not allowed"></textarea>
             <input type="checkbox" name="consent" id="consent" value="test"/>
@@ -150,7 +154,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">Github</a></small></li>
-            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.5.2.min.css">Download</a></small></li>
+            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.5.3.min.css">Download</a></small></li>
             <li><small><a href="http://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
