--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="keywords" content="css, html5, css framework"/>
     <meta name="description" content="CSS Framework for Dummies"/>
-    <link rel="stylesheet" type="text/css" href="tacit.min.css"/>
+    <link rel="stylesheet" href="tacit.min.css"/>
     <title>tacit</title>
     <link rel="shortcut icon" type="image/gif" href="logo.gif"/>
   </head>
@@ -14,14 +14,14 @@
       <header>
         <nav>
           <ul>
-            <li><code>0.5.4</code></li>
+            <li><code>0.5.5</code></li>
           </ul>
         </nav>
       </header>
       <article>
         <p>
           <strong>Tacit</strong> is a CSS framework for <em>dummies</em>, who want their
-          web services look attractive but have almost zero
+          web services to look attractive but have almost zero
           skills in graphic design, just like
           <a href="https://github.com/yegor256">myself</a>.
           This is how your website will look if you add just this code to your HTML:
@@ -29,8 +29,7 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" type="text/css"
-      href="//yegor256.github.io/tacit/tacit.min.css"/&gt;
+    &lt;link rel="stylesheet" href="//yegor256.github.io/tacit/tacit.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -43,7 +42,7 @@
           Check the source code of this page.
         </p>
         <p>
-          By the way, it is compliant with
+          By the way, Tacit is compliant with
           W3C validator requirements:
           <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fyegor256.github.io%2Ftacit%2F&amp;doctype=Inline">HTML</a> and
           <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fyegor256.github.io%2Ftacit%2F&amp;profile=css3">CSS</a>.
@@ -58,7 +57,7 @@
             <input name="email" type="text" id="email" size="25" placeholder="must be unique"/>
             <label for="sex">Your gender:</label>
             <select name="sex" id="sex">
-              <option value="none">won't tell</option>
+              <option value="none">don't want to say</option>
               <option value="female">female</option>
               <option value="male">male</option>
             </select>
@@ -103,17 +102,17 @@
         <h2>Headings</h2>
         <p>Just use standard <code>&lt;h1&gt;</code>...<code>&lt;h6&gt;</code> tags:
         <h1>This is &lt;h1&gt;</h1>
-        <p>Use heading of the highest level once per page.</p>
+        <p>Use a heading of the highest level once per page.</p>
         <h2>This is &lt;h2&gt;</h2>
         <p>Use <code>&lt;h2&gt;</code> for sections of the page.</p>
         <h3>This is &lt;h3&gt;</h3>
         <p>Use <code>&lt;h3&gt;</code> for sub-sections.</p>
         <h4>This is &lt;h4&gt;</h4>
-        <p>I would recommend to avoid type of headers at all.</p>
+        <p>I would recommend to avoid this type of heading at all.</p>
         <h5>This is &lt;h5&gt;</h5>
-        <p>I would recommend to avoid type of headers at all.</p>
+        <p>I would recommend to avoid this type of heading at all.</p>
         <h6>This is &lt;h6&gt;</h6>
-        <p>I would recommend to avoid type of headers at all.</p>
+        <p>I would recommend to avoid this type of heading at all.</p>
         <h2>Lists</h2>
         <p>Just use standard <code>&lt;ul&gt;</code> and <code>&lt;ol&gt;</code> tags:</code>
         <ul>
@@ -140,7 +139,7 @@
         <p>
           The framework is still in development. If you want to contribute,
           fork it and submit a <a href="https://github.com/yegor256/tacit">pull request</a>.
-          Your help is always apprecitated.
+          Your help is always appreciated.
         </p>
       </article>
       <footer>
@@ -153,8 +152,8 @@
         </nav>
         <nav>
           <ul>
-            <li><small><a href="https://github.com/yegor256/tacit">Github</a></small></li>
-            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.5.4.min.css">Download</a></small></li>
+            <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
+            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.5.5.min.css">Download</a></small></li>
             <li><small><a href="http://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
