--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <h6>This is &lt;h6&gt;</h6>
         <p>I would recommend to avoid this type of heading at all.</p>
         <h2>Lists</h2>
-        <p>Just use standard <code>&lt;ul&gt;</code> and <code>&lt;ol&gt;</code> tags:</code>
+        <p>Just use standard <code>&lt;ul&gt;</code> and <code>&lt;ol&gt;</code> tags:
         <ul>
           <li>Orange</li>
           <li>
