--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>0.5.5</code></li>
+            <li><code>0.5.6</code></li>
           </ul>
         </nav>
       </header>
@@ -29,7 +29,7 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" href="//yegor256.github.io/tacit/tacit.min.css"/&gt;
+    &lt;link rel="stylesheet" href="http://yegor256.github.io/tacit/tacit.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -114,7 +114,7 @@
         <h6>This is &lt;h6&gt;</h6>
         <p>I would recommend to avoid this type of heading at all.</p>
         <h2>Lists</h2>
-        <p>Just use standard <code>&lt;ul&gt;</code> and <code>&lt;ol&gt;</code> tags:</code>
+        <p>Just use standard <code>&lt;ul&gt;</code> and <code>&lt;ol&gt;</code> tags:
         <ul>
           <li>Orange</li>
           <li>
@@ -153,7 +153,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.5.5.min.css">Download</a></small></li>
+            <li><small><a href="http://yegor256.github.io/tacit/tacit-0.5.6.min.css">Download</a></small></li>
             <li><small><a href="http://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
