lint fixes, add placeholder test image

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         <p>Sometimes you want to let people know they should press a keyboard command like <kbd>ctrl + l</kbd>.</p>
         <h2>Images</h2>
         <figure>
-          <img src="a.jpg" />
-          <figcaption>A photo with balloons</figcaption>
+          <img src="http://placehold.it/900x500" />
+          <figcaption>A photo placeholder text</figcaption>
         </figure>
         <h2>Work in progress</h2>
         <p>
