--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               <option value="female">female</option>
               <option value="male">male</option>
             </select>
+            <label for="sex">Your age:</label>
             <input type="radio" id="under" name="age"/>
             <label for="under">I'm under 18</label>
             <input type="radio" id="over" name="age"/>
