#60 added style for select[multiple]

--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
           <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyegor256.github.io%2Ftacit%2F&amp;profile=css3">CSS</a>.
         </p>
         <h2>Forms</h2>
-        <p>
-          Here is a simple form:
-        </p>
         <form method="get" action="#">
           <fieldset>
+            <legend>Here is a simple form:</legend>
             <label for="email">Your email:</label>
             <input name="email" type="text" id="email" size="25" placeholder="must be unique"/>
             <label for="sex">Your gender:</label>
@@ -62,10 +60,20 @@
               <option value="male">male</option>
             </select>
             <label for="sex">Your age:</label>
-            <input type="radio" id="under" name="age"/>
-            <label for="under">I'm under 18</label>
-            <input type="radio" id="over" name="age"/>
-            <label for="over">I'm over 18</label>
+            <input type="radio" id="under" name="age"/> <span>I'm under 18</span>
+            <input type="radio" id="over" name="age"/> <span>I'm over 18</span>
+            <label for="sex">Your favorite food:</label>
+            <select multiple="multiple" name="food">
+              <optgroup label="Italian">
+                <option value="1">Pizza</option>
+                <option value="2">Spaghetti</option>
+              </optgroup>
+              <optgroup label="Asian">
+                <option value="4">Sushi</option>
+              </optgroup>
+              <option value="3">Hamburger</option>
+              <option value="5">Borsht</option>
+            </select>
             <label for="address">Your full address:</label>
             <textarea name="address" id="address" placeholder="PO box is not allowed"></textarea>
             <input type="checkbox" name="consent" id="consent" value="test"/>
