--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-VERSION.min.css"/&gt;
+    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-0.8.1.min.css"/&gt;
   &lt;/head&gt;
+  &lt;body&gt;
+    &lt;-- contents go here --&gt;
+  &lt;/body&gt;
 &lt;/html&gt;</pre>
         <p>
           You should <strong>not</strong> use any CSS classes to make your HTML code look nice. Just
