--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
         </p>
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
-  &lt;head&gt;
+  &lt;head lang="en"&gt;
+    &lt;meta charset="UTF-8"&gt;
     &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-0.8.1.min.css"/&gt;
   &lt;/head&gt;
   &lt;body&gt;
-    &lt;-- contents go here --&gt;
+    &lt;!-- Webpage content goes here --&gt;
   &lt;/body&gt;
 &lt;/html&gt;</pre>
         <p>
