--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 &lt;html&gt;
   &lt;head lang="en"&gt;
     &lt;meta charset="UTF-8"&gt;
-    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-0.8.1.min.css"/&gt;
+    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-VERSION.min.css"/&gt;
   &lt;/head&gt;
   &lt;body&gt;
     &lt;!-- Webpage content goes here --&gt;
